src/test/ui/borrowck/issue-64453.stderr
error[E0744]: `match` is not allowed in a `static`
  --> $DIR/issue-64453.rs:4:31
   |
LL | static settings_dir: String = format!("");
   |                               ^^^^^^^^^^^
   |
   = note: this error originates in a macro outside of the current crate (in Nightly builds, run with -Z external-macro-backtrace for more info)

error: aborting due to previous error

For more information about this error, try `rustc --explain E0744`.
